--- a/orders.html
+++ b/orders.html
@@ -18,7 +18,7 @@
       </div>
       <div class="overflow-auto">
         <div>
-          <a href="#" class="sidebar-link">
+          <a href="index.html" class="sidebar-link">
             <div class="px-4">首頁</div>
           </a>
         </div>
@@ -31,7 +31,11 @@
             </div>
           </a>
           <div class="collapse" id="menu-order">
-            <a href="#" class="sidebar-link">
+            <a href="orders.html" class="sidebar-link">
+              <div class="ps-5">所有訂單</div>
+            </a>
+            
+            <a href="order.html" class="sidebar-link">
               <div class="ps-5">單一訂單細節</div>
             </a>
           </div>
